# php-to-rust

./: README.md
1-hello-world/: README.md  hello
10-decorator-pattern/: Cargo.toml  README.md
11-builder-pattern/: Cargo.toml  README.md
12-factory-pattern/: Cargo.toml  README.md
13-adapter-pattern/: Cargo.toml  README.md
14-strategy-pattern/: Cargo.toml  README.md
15-observer-pattern/: Cargo.toml  README.md
16-state-pattern/: Cargo.toml  README.md
17-CoR-pattern/: Cargo.toml  README.md
18-functional-exercise/: Cargo.toml  README.md
19-testing-practice/: Cargo.toml  README.md
2-cli_calculator/: Cargo.toml  README.md
20-shared-documentviews/: Cargo.toml  README.md
21-http-server/: README.md
22-cmd-file-operations/: Cargo.toml  README.md  test.txt
23-merge-line-counts/: Cargo.toml  README.md  data1.txt  data2.txt
26-docker-rust-with-postgresql/: .env.example  Cargo.toml  Dockerfile  README.md  compose.yml
26-docker-rust-with-postgresql/src/: main.rs
27-shop-api/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
27-shop-api/migrations/: 20260322212904_create_shop_tables.down.sql  20260322212904_create_shop_tables.up.sql  20260323120000_add_product_cost_cents.down.sql  20260323120000_add_product_cost_cents.up.sql
27-shop-api/src/: lib.rs  main.rs
27-shop-api/src/api/: dto.rs  mod.rs  resources.rs  validation.rs
27-shop-api/src/domain/: basket.rs  mod.rs  product.rs
27-shop-api/tests/: api_basket_routes.rs  api_basket_validation.rs  api_health.rs  api_product_by_id.rs  api_products.rs
27-shop-api/tests/common/: mod.rs
(+53 files in other folders)
