[package]
name = "docker-rust-with-postgresql"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
serde_json = "1.0"
